--- a/src/main/config/sample_config.json
+++ b/src/main/config/sample_config.json
@@ -3,9 +3,7 @@
   "ignoredUrls": ["https://blog.udacity.com/.*"],
   "ignoredWords": ["^.{1,3}$"],
   "parallelism": 4,
-  "maxDepth": 5,
-  "timeoutSeconds": 10,
-  "popularWordCount": 5,
-  "profileOutputPath": "profileData.txt",
-  "resultPath": "resultData.txt"
+  "maxDepth": 2,
+  "timeoutSeconds": 2,
+  "popularWordCount": 5
 }
